add_executable(poisson_uniform poisson_uniform.cc)
add_dune_alberta_flags(poisson_uniform)
add_executable(poisson_adaptive poisson_adaptive.cc)
add_dune_alberta_flags(poisson_adaptive)
add_executable(advection_stationary advection_stationary.cc)
add_dune_alberta_flags(advection_stationary)
add_executable(advection_instationary advection_instationary.cc)
add_dune_alberta_flags(advection_instationary)
add_executable(heat_instationary heat_instationary.cc)
add_dune_alberta_flags(heat_instationary)
