if(SUPERLU_FOUND)
add_executable(dgdiffusion dgdiffusion.cc)
add_dune_alberta_flags(dgdiffusion)
add_executable(dgdiffusion_hp dgdiffusion-hp.cc)
add_executable(dgldomain dgldomain.cc)
add_dune_alberta_flags(dgldomain)
add_executable(dgoverlapping dgoverlapping.cc)
add_dune_alberta_flags(dgoverlapping)
add_executable(rt0main rt0main.cc)
add_dune_alberta_flags(rt0main)
endif(SUPERLU_FOUND)

if(EIGEN_FOUND)
add_executable(laplacedirichletccfv_eigen laplacedirichletccfv.cc)
endif(EIGEN_FOUND)

add_executable(overlappingsinglephaseflowccfv overlappingsinglephaseflowccfv.cc)
add_dune_alberta_flags(overlappingsinglephaseflowccfv)
add_executable(overlappingsinglephaseflow overlappingsinglephaseflow.cc)
add_dune_alberta_flags(overlappingsinglephaseflow)
add_executable(nonoverlappingsinglephaseflow nonoverlappingsinglephaseflow.cc)
add_dune_alberta_flags(nonoverlappingsinglephaseflow)
add_executable(poisson poisson.cc)
add_dune_alberta_flags(poisson)
add_executable(nonlineardiffusion nonlineardiffusion.cc)
add_dune_alberta_flags(nonlineardiffusion)
add_executable(transporttest transporttest.cc)
add_dune_alberta_flags(transporttest)
add_executable(instationarytest instationarytest.cc)
add_dune_alberta_flags(instationarytest)
add_executable(laplacedirichletccfv laplacedirichletccfv.cc)
add_executable(reentrantcorner reentrantcorner.cc)
add_dune_alberta_flags(reentrantcorner)
add_executable(diffusion diffusion.cc)
add_dune_alberta_flags(diffusion)
add_executable(scalabilitytest scalabilitytest.cc)
add_dune_alberta_flags(scalabilitytest)
add_executable(ldomain ldomain.cc)
add_dune_alberta_flags(ldomain)

# set a symlink for the grid subfolder in the build directory
dune_symlink_to_source_files(grids)
dune_symlink_to_source_files(ldomain.ini)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/vtk)

set(CLEANFILES  poisson_*.vtu reentrant_*.vtu dgfparser.log q1*.vtu *.vtu *.png)
